<resources>
    <string name="app_name">FitPredict</string>
    <string name="logo">Logo</string>
    <string name="title">Title</string>
    <string name="quote">Track nutrition, macros, and progress easily for your fitness goals.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up_tool_bar">Sign Up</string>
    <string name="back_button">Back Button</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_wait">Please wait...</string>
    <string name="personal_info">Personal Info</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="sign_in_toolbar">Sign In</string>
    <string name="user_image">user image</string>
    <string name="food_log">Food log</string>
    <string name="menu_icon">menu icon</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">User Name</string>
    <string name="food_name">Food Name</string>
    <string name="random_time_stamp">12:00:00</string>
    <string name="random_calories">Calories: 1200</string>
    <string name="random_protein">Protein: 20g</string>
    <string name="random_fat">Fats: 10g</string>
    <string name="random_carb">Carbs: 30g</string>
    <string name="no_food_logged_today">No food logged today</string>
    <string name="add">Add</string>
    <string name="search_for_food">Search for food</string>
    <string name="random">Random</string>
    <string name="add_food">Add Food</string>
    <string name="one">1</string>
    <string name="unit">unit</string>
    <string name="random_date">12/09/2024</string>
    <string name="analyze">Analyze</string>
</resources>