<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_food_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/food_name"
        android:layout_margin="5dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_time_stamp" />

    <TextView
        android:id="@+id/tv_time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_time_stamp"
        android:layout_margin="5dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_food_name"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_calories"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_protein"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_fat"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_carb"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/ll_main"
        android:src="@color/black"
        android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>
