<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.IntroActivity"
    android:background="@color/variant3">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/logo"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_icon"
        android:contentDescription="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quote"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:id="@+id/fl_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/fl_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:background="@drawable/ripple_effect_sign_in"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:textColor="@color/variant5"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:background="@drawable/ripple_effect_sign_up"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textColor="@color/variant5"
            />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>