<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LogActivity">

    <FrameLayout android:id="@+id/fl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/variant2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/user_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/add_food"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_back"
                app:layout_constraintEnd_toStartOf="@id/iv_add"/>

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@color/variant2"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/menu_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_toolbar">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@color/black"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFoodCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvFoodServingQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvFoodServingUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_et_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_main"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        >

        <EditText
            android:id="@+id/et_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:layout_weight="1"
            android:text="@string/one"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_weight="3"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_add_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:backgroundTint="@color/variant8"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>